--- a/view.html
+++ b/view.html
@@ -25,19 +25,35 @@
            <li><a href="info.html">info</a></li>
          </ul>
        </div>
+       <div class="slideshowControls">
+        <a href="#" class="prev"> << </a> </span>
+        <a href="#" class="next"> >></a></span>
+       </div>
       </div>
       <div class="leftcolumn">
         <nav>
           <ul>
-            <li><a href="work.html">work</a></li>
+            <li><a href="work.html"><span style="bold">work</span></a></li>
             <li><a href="words.html">words</a></li>              
             <li><a href="info.html">info</a></li>
           </ul>
         </nav>
       </div>
-      <div id="content" class="hidden">
-        <div id="home" class="homeslideshow">
-          <img src="img/a1eye.jpg" alt="eye frontal";>
+      <div id="content">
+        <div id="slideshow" class="viewslideshow">
+          <div>
+            <img src="img/a1eye.jpg" alt="" class="active" />
+          </div>
+          <div>
+            <img src="img/a2head.jpg" alt="" />
+          </div>
+          <div>
+            <img src="img/a3brain.jpg" alt="" />
+          </div>
+          <div>
+            <img src="img/a4lungs.jpg" alt="" />
+          </div>
+          
         </div>
       </div>
     </div>
