--- a/work.html
+++ b/work.html
@@ -39,53 +39,66 @@
       </div>
       <div id="content" class="hidden">
         <div class="grid">
-            <img src="img/a1.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a1eye.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/a2.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a2head.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/a3.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a3brain.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/a4.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a4lungs.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/d1.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/d1.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/d2.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/d2.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/d3.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/d3.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/s1.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/s1.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/a1.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a1.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/a2.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a2.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/a3.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a3.jpg"></a>
+          </div>
         </div>
         <div class="grid">
-            <img src="img/a4.jpg">
+          <div class="box">
+            <a href="view.html"><img src="img/a4.jpg"></a>
+          </div>
         </div>
-        <div class="grid">
-            <img src="img/d1.jpg">
-        </div>
-        <div class="grid">
-            <img src="img/d2.jpg">
-        </div>
-        <div class="grid">
-            <img src="img/d3.jpg">
-        </div>
-        <div class="grid">
-            <img src="img/s1.jpg">
-        </div>
+        
                   
       </div>
       <footer>
